--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <meta name="description" content="Venta de materiales, herramientas y servicios para la construcción">
+    <meta name="keywords"
+        content="Materiales para la construccion, Herramientas, Servicios para la construccion, Arquitectura, Arquitectos, Obra, Equipamiento, Decoracion, Venta de materiales, Asesoriamiento en obra, Presupuestos, Albañileria, Refacciones, Repraciones, Arreglos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -37,13 +40,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/header1.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/header1.jpg" class="d-block w-100" alt="Foto slider uno">
             </div>
             <div class="carousel-item">
-                <img src="./assets/header2.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/header2.jpg" class="d-block w-100" alt="Foto slider dos">
             </div>
             <div class="carousel-item">
-                <img src="./assets/header3.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/header3.jpg" class="d-block w-100" alt="Foto slider tres">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -57,30 +60,27 @@
     </div>
     <main class="home__secciones">
         <!--Titulo principal-->
-        <article class="home__secciones--texto">
-            <h1 class="font-size-56 text-align-center">TODOS LOS PROVEEDORES PARA TU OBRA ESTÁN AQUÍ​</h1>
+        <article>
+            <h1 class="home__secciones--titulo">TODOS LOS PROVEEDORES PARA TU OBRA ESTÁN AQUÍ​</h1>
         </article>
     </main>
     <main>
         <!--Seccion novedades-->
         <section class="home__secciones">
             <article class="home__secciones--botones">
-                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png"
-                    alt="Foto baldosas decorativas">
+                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png" alt="Flecha indicadora">
                 <a href="./pages/tienda.html" target="_self"><img class="home__secciones--foto" src="./assets/bt1.jpg"
-                        alt="Foto baldosas decorativas"></a>
+                        alt="Foto tienda Materiales y herramientas"></a>
             </article>
             <article class="home__secciones--botones">
-                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png"
-                    alt="Foto baldosas decorativas">
+                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png" alt="Flecha indicadora">
                 <a href="./pages/tienda.html" target="_self"><img class="home__secciones--foto" src="./assets/bt2.jpg"
-                        alt="Foto IA Asi ha cambiado la arquitectura"></a>
+                        alt="Foto tienda Sector Equipar"></a>
             </article>
             <article class="home__secciones--botones">
-                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png"
-                    alt="Foto baldosas decorativas">
+                <img class="home__secciones--flecha animacion" src="./assets/flecha2.png" alt="Flecha indicadora">
                 <a href="./pages/tienda.html" target="_self"><img class="home__secciones--foto" src="./assets/bt3.jpg"
-                        alt="Foto tendencias de color 2023"></a>
+                        alt="Foto tienda Sector Decoración"></a>
             </article>
         </section>
     </main>
@@ -90,26 +90,26 @@
         </section>
         <section class="home__clientes">
             <div class="home__clientes--logos">
-                <img src="./assets/clientes1.png" width="250px" alt="Foto staff 1">
+                <img src="./assets/clientes1.png" width="250px" alt="Logo Orange Obras Civiles">
             </div>
             <div class="home__clientes--logos">
-                <img src="./assets/clientes2.png" width="250px" alt="Foto staff 1">
+                <img src="./assets/clientes2.png" width="250px" alt="Logo ATV">
             </div>
             <div class="home__clientes--logos">
-                <img src="./assets/clientes3.png" width="250px" alt="Foto staff 1">
+                <img src="./assets/clientes3.png" width="250px" alt="Logo Riva">
             </div>
             <div class="home__clientes--logos">
-                <img src="./assets/clientes4.png" width="250px" alt="Foto staff 1">
+                <img src="./assets/clientes4.png" width="250px" alt="Logo Elemental">
             </div>
             <div class="home__clientes--logos">
-                <img src="./assets/clientes5.png" width="250px" alt="Foto staff 1">
+                <img src="./assets/clientes5.png" width="250px" alt="Logo CAM">
             </div>
         </section>
     </main>
     <main class="home__novedades">
         <!--Seccion novedades-->
         <section>
-            <h2 class="home__novedades--titulo">Estos clientes confían en Revista Serviobras</h2>
+            <h2 class="home__novedades--titulo titulos-novedades">Novedades</h2>
         </section>
         <section class="home__secciones">
             <article class="home__novedades--cards">
@@ -120,7 +120,7 @@
                     y reacciona: la baldosa puede centellear, iluminarse, captar y dispersar colores vecinos en su
                     superficie. Decorar con este material ofrece nuevas oportunidades en arquitectura y diseño de
                     interiores. Conocelos todos en este informe.</p>
-                <button class="btn boton">VER MÁS</button>
+                <button class="boton--ver-mas">VER MÁS</button>
             </article>
             <article class="home__novedades--cards">
                 <img src="./assets/news2.jpg" alt="Foto IA Asi ha cambiado la arquitectura">
@@ -131,7 +131,7 @@
                     EverydayExperiments.com. Desde la meditación y la naturaleza hasta la comida y el juego, estos
                     experimentos permiten nuevas formas de sentir.
                 </p>
-                <button class="btn boton">VER MÁS</button>
+                <button class="boton--ver-mas">VER MÁS</button>
             </article>
             <article class="home__novedades--cards">
                 <img src="./assets/news3.jpg" alt="Foto tendencias de color 2023">
@@ -141,34 +141,61 @@
                     diseño, interiorismo, arquitectura o moda, estos colores se relacionan con la renovación, como
                     los tonos neutrales como el crema o beige, los pasteles y la gama de azules y verdes claros.
                     Conocelos todos en este informe.</p>
-                <button class="btn boton">VER MÁS</button>
+                <button class="boton--ver-mas">VER MÁS</button>
             </article>
         </section>
     </main>
     <main>
         <section class="home__bullets">
             <article class="home__bullets--cards">
-                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets1.png" alt="Foto staff 1">
+                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets1.png"
+                        alt="Icono Envio Gratis">
                     <h2>ENVÍO GRATIS DESDE $10.000</h2>
                     <p>Solo por estar registrado en Revista Serviobras tenés envíos gratis en
                         miles de productos.</p>
                     <p>Conocé más sobre este beneficio</p>
                 </div>
-                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets2.png" alt="Foto staff 1">
+                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets2.png"
+                        alt="Icono Como Pagar">
                     <h2>ELEGÍ CÓMO PAGAR</h2>
-                    <p>Podés pagar con tarjeta, débito, efectivo o hasta 12 cuotas sin tarjeta con Serviobras Crédito.</p>
+                    <p>Podés pagar con tarjeta, débito, efectivo o hasta 12 cuotas sin tarjeta con Serviobras Crédito.
+                    </p>
                     <p>Cómo pagar tus compras</p>
                 </div>
-                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets3.png" alt="Foto staff 1">
+                <div class="home__bullets--texto"><img class="text-align-center" src="./assets/bullets3.png"
+                        alt="Icono Seguridad">
                     <h2>SEGURIDAD, DE PRINCIPIO A FIN</h2>
-                    <p>¿No te gusta? ¡Devolvelo! En Revista Serviobras, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
+                    <p>¿No te gusta? ¡Devolvelo! En Revista Serviobras, no hay nada que no puedas hacer, porque estás
+                        siempre protegido.</p>
                     <p>Cómo te protegemos</p>
                 </div>
+            </article>
         </section>
     </main>
-    <footer class="footer">
-        <p><img class="img-size" src="./assets/so_white.svg" width="200px" alt="Logo Serviobras"></p>
-        <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
+    <footer>
+        <div class="footer__0">
+            <div class="footer__1">
+                <div>
+                    <div class="footer__logo">
+                        <img src="./assets/so_white.svg" width="200px">
+                    </div>
+                </div>
+            </div>
+            <div class="footer__2">
+                <div class="footer__box">
+                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="./assets/rrss_ig.png" alt="Instagram"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="./assets/rrss_ln.png" alt="Linkedin"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.youtube.com/" target="_blank"><img src="./assets/rrss_yt.png" alt="YouTube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__caja2">
+            <p>Derechos reservados 2023</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
