--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Compra aqui todos los materiales, herramientas y servicios para la construcción">
+    <meta name="keywords"
+        content="Compra de materiales para la construccion, Comprar herramientas, Contratar servicios para la construccion, Contratar arquitectos, Presupuestos, Cotizaicones, Precios, Obra, Equipamiento, Decoracion, Asesoriamiento en obra, Albañileria, Refacciones, Repraciones, Arreglos">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,12 +17,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>Revista Serviobras</title>
+    <title>Tienda | Revista Serviobras</title>
 </head>
 
 <body>
     <div class="grid-container">
-        <header class="header">
+        <header class="header--tienda">
             <a href="../index.html" target="_self">
                 <img class="img-size" src="../assets/so_white.svg" width="250px" alt="Logo Serviobras">
             </a>
@@ -34,99 +37,122 @@
         <main class="main">
             <img src="../assets/header2.jpg" width="100%" alt="Foto header">
         </main>
-        <nav class="nav">
-            <div class="partners">
-                <h2 class="font-color-blanco">Estos partners confían en Serviobras</h2>
+        <nav class="nav-1">
+            <div>
                 <div>
-                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners1.png" alt="Partners Elemental"></a>
+                    <h2>Estos partners confían en Serviobras</h2>
                 </div>
-                <div>
-                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners2.png" alt="Partners Elemental"></a>
-                </div>
-                <div>
-                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners3.png" alt="Partners Elemental"></a>
-                </div>
-                <div>
-                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners4.png" alt="Partners Elemental"></a>
-                </div>
-                <div>
-                    <a href="https://elementalconstructora.com.ar/" target="_blank"><img src="../assets/partners5.png" alt="Partners Elemental"></a>
+                <div class="partners">
+                    <div>
+                        <a href="https://elementalconstructora.com.ar/" target="_blank"><img
+                                src="../assets/partners1_gris.png" alt="Partners Elemental"></a>
+                    </div>
+                    <div>
+                        <a href="https://elementalconstructora.com.ar/" target="_blank"><img
+                                src="../assets/partners2_gris.png" alt="Partners Riva"></a>
+                    </div>
+                    <div>
+                        <a href="https://elementalconstructora.com.ar/" target="_blank"><img
+                                src="../assets/partners3_gris.png" alt="Partners CAM"></a>
+                    </div>
+                    <div>
+                        <a href="https://elementalconstructora.com.ar/" target="_blank"><img
+                                src="../assets/partners4_gris.png" alt="Partners ATV"></a>
+                    </div>
+                    <div>
+                        <a href="https://elementalconstructora.com.ar/" target="_blank"><img
+                                src="../assets/partners5_gris.png" alt="Partners Orange"></a>
+                    </div>
                 </div>
             </div>
-            <!--<ul>
-                <li><a href="#" target="_self">Proveedores de Materiales</a></li>
-                <li><a href="#" target="_self">Sector Equipar</a></li>
-                <li><a href="#" target="_self">Sector Decorar</a></li>
-                <li><a href="#" target="_self">Filtros</a></li>
-                <li><a href="#" target="_self">Medios de pago</a></li>
-                <li><a href="#" target="_self">Opciones de entrega</a></li>
-            </ul> -->
         </nav>
         <section class="section-1">
             <article class="productos-box">
-                <img src="../assets/tienda_AireAcondicionado_Portada.jpg" width="300px" alt="Foto aire acondicionado">
+                <img src="../assets/tienda_AireAcondicionado_Portada.jpg" width="300px" alt="Foto Aire acondicionado">
                 <h2>AIRE ACONDICIONADO SPLIT INVERTER SURREY</h2>
                 <p>Aire Acondicionado Split Inverter. Frigorias: 2967. Calorias: 3165. Potencia en W: 3450. Control
                     Remoto. Display. Timer. Funcion Sleep.</p>
-                <h3 class="text-decoration-tachado">$300.000</h3>
+                <h3 class="precio__rebajado">$300.000</h3>
                 <h2>$199.000</h2>
+                <button class="boton">COMPRAR</button>
             </article>
             <article class="productos-box">
-                <img src="../assets/tienda_Burlete_Portada.jpg" width="300px" alt="Foto aire acondicionado">
+                <img src="../assets/tienda_Burlete_Portada.jpg" width="300px" alt="Foto Burletes">
                 <h2>BURLETES PARA VENTANAS AUTOADHESIVOS</h2>
                 <p>Colocar en puertas, ventanas y demás aberturas donde se requiera la absorción de golpes y evitar el
                     paso de agua, corrientes de aire, polvo y ruidos.</p>
-                <h3 class="text-decoration-tachado">$300.000</h3>
+                <h3 class="precio__rebajado">$300.000</h3>
                 <h2>$199.000</h2>
+                <button class="boton">COMPRAR</button>
             </article>
             <article class="productos-box">
-                <img src="../assets/tienda_Candados_Portada.jpg" width="300px" alt="Foto aire acondicionado">
-                <h2>CANDADO BULIT DE ALEACIÓN ALUMINIO</h2>
+                <img src="../assets/tienda_Candados_Portada.jpg" width="300px" alt="Foto Candados">
+                <h2>CANDADO BULIT DE ALEACIÓN ALUMINIO COMBINACIÓN</h2>
                 <p>Forma del candado: cuadrado. Tipo de apertura: combinación numérica. Materiales: metal. Medidas:
                     7.5cm de alto x 40mm de ancho.Colores rojo y verde</p>
-                <h3 class="text-decoration-tachado">$300.000</h3>
+                <h3 class="precio__rebajado">$300.000</h3>
                 <h2>$199.000</h2>
+                <button class="boton">COMPRAR</button>
             </article>
         </section>
         <section class="section-2">
             <article class="productos-box">
-                <img src="../assets/tienda_AireAcondicionado_Portada.jpg" width="300px" alt="Foto aire acondicionado">
+                <img src="../assets/tienda_AireAcondicionado_Portada.jpg" width="300px" alt="Foto Aire acondicionado">
                 <h2>AIRE ACONDICIONADO SPLIT INVERTER SURREY</h2>
                 <p>Aire Acondicionado Split Inverter. Frigorias: 2967. Calorias: 3165. Potencia en W: 3450. Control
                     Remoto. Display. Timer. Funcion Sleep.</p>
-                <h3 class="text-decoration-tachado">$300.000</h3>
+                <h3 class="precio__rebajado">$300.000</h3>
                 <h2>$199.000</h2>
+                <button class="boton">COMPRAR</button>
             </article>
             <article class="productos-box">
-                <img src="../assets/tienda_Burlete_Portada.jpg" width="300px" alt="Foto aire acondicionado">
+                <img src="../assets/tienda_Burlete_Portada.jpg" width="300px" alt="Foto Burletes">
                 <h2>BURLETES PARA VENTANAS AUTOADHESIVOS</h2>
                 <p>Colocar en puertas, ventanas y demás aberturas donde se requiera la absorción de golpes y evitar el
                     paso de agua, corrientes de aire, polvo y ruidos.</p>
-                <h3 class="text-decoration-tachado">$300.000</h3>
+                <h3 class="precio__rebajado">$300.000</h3>
                 <h2>$199.000</h2>
+                <button class="boton">COMPRAR</button>
             </article>
             <article class="productos-box">
-                <img src="../assets/tienda_Candados_Portada.jpg" width="300px" alt="Foto aire acondicionado">
-                <h2>CANDADO BULIT DE ALEACIÓN ALUMINIO</h2>
+                <img src="../assets/tienda_Candados_Portada.jpg" width="300px" alt="Foto Candados">
+                <h2>CANDADO BULIT DE ALEACIÓN ALUMINIO COMBINACIÓN</h2>
                 <p>Forma del candado: cuadrado. Tipo de apertura: combinación numérica. Materiales: metal. Medidas:
                     7.5cm de alto x 40mm de ancho.Colores rojo y verde</p>
-                <h3 class="text-decoration-tachado">$300.000</h3>
+                <h3 class="precio__rebajado">$300.000</h3>
                 <h2>$199.000</h2>
+                <button class="boton">COMPRAR</button>
             </article>
         </section>
         <aside class="aside">
             <div class="banner">
                 <a href="https://www.suprabond.com/producto-tag/bulit/" target="_blank"><img src="../assets/banner2.jpg"
-                        alt="Banner lateral"></a>
+                        alt="Banner lateral Discos"></a>
             </div>
             <div class="banner">
                 <a href="https://www.suprabond.com/producto-tag/bulit/" target="_blank"><img src="../assets/banner1.jpg"
-                        alt="Banner lateral"></a>
+                        alt="Banner lateral Espatulas"></a>
             </div>
         </aside>
-        <footer class="footer">
-            <img class="img-size" src="../assets/so_white.svg" width="200px" alt="Logo Serviobras">
-            <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
+        <footer class="footer__tienda">
+            <div class="footer__1">
+                <div>
+                    <div class="footer__logo">
+                        <img src="../assets/so_white.svg" width="200px">
+                    </div>
+                </div>
+            </div>
+            <div class="footer__2">
+                <div class="footer__box">
+                    <img src="../assets/rrss_ig.png" alt="">
+                </div>
+                <div class="footer__box">
+                    <img src="../assets/rrss_ln.png" alt="">
+                </div>
+                <div class="footer__box">
+                    <img src="../assets/rrss_yt.png" alt="">
+                </div>
+            </div>
         </footer>
     </div>
 </body>
