--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Contactate con nosotros y recibi el mejor asesoramiento">
+    <meta name="keywords" content="Contacto, Mensaje, Preguntas, Asesoramiento construccion, Consejos sobre herramientas, Servicios para la construccion, Arquitectura, Arquitectos, Obra, Equipamiento, Decoracion, Venta de materiales, Asesoriamiento en obra, Presupuestos, Albañileria, Refacciones, Repraciones, Arreglos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
@@ -17,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>Revista Serviobras</title>
+    <title>Contacto | Revista Serviobras</title>
 </head>
 
 <body>
@@ -38,13 +40,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/header1.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header1.jpg" class="d-block w-100" alt="Foto slider uno">
             </div>
             <div class="carousel-item">
-                <img src="../assets/header2.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header2.jpg" class="d-block w-100" alt="Foto slider dos">
             </div>
             <div class="carousel-item">
-                <img src="../assets/header3.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header3.jpg" class="d-block w-100" alt="Foto slider tres">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -82,11 +84,11 @@
         <form class="form_main--box">
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Nombre y apellido</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="text" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Teléfono</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="tel" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">E-Mail</label>
@@ -102,7 +104,8 @@
                 <option value="2">Two</option>
                 <option value="3">Three</option>
             </select>-->
-            <button type="submit" class="btn boton">Enviar</button>
+            <button type="submit" class="boton">Enviar</button>
+            <button type="reset" class="boton--reset">Limpiar</button>
         </form>
 
         <iframe class="form__map--iframe"
@@ -111,9 +114,30 @@
     </section>
 
     <!--Footer-->
-    <footer class="footer">
-        <img class="img-size" src="../assets/so_white.svg" width="200px" alt="Logo Serviobras">
-        <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
+    <footer>
+        <div class="footer__0">
+            <div class="footer__1">
+                <div>
+                    <div class="footer__logo">
+                        <img src="../assets/so_white.svg" width="200px">
+                    </div>
+                </div>
+            </div>
+            <div class="footer__2">
+                <div class="footer__box">
+                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="../assets/rrss_ig.png" alt="Instagram"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../assets/rrss_ln.png" alt="Linkedin"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.youtube.com/" target="_blank"><img src="../assets/rrss_yt.png" alt="YouTube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__caja2">
+            <p>Derechos reservados 2023</p>
+        </div>
     </footer>
     <script> src = "../scripts/bootstrap.bundle.min"</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
