--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Conocé el equipo que esta detras de esta guia de servcios">
+    <meta name="keywords" content="Staff, Equipo de trabajo, Profesionales de la construccion, Materiales para la construccion, Herramientas, Servicios para la construccion, Arquitectura, Arquitectos, Obra, Equipamiento, Decoracion, Venta de materiales, Asesoriamiento en obra, Presupuestos, Albañileria, Refacciones, Repraciones, Arreglos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>Revista Serviobras</title>
+    <title>Nosotros | Revista Serviobras</title>
 </head>
 
 <body>
@@ -27,7 +29,7 @@
 
         <!--Menu-->
         <ul>
-            <li><a href="../index.html" target="_self">Ir a inicio</a></li>
+            <li><a href="../index.html" target="_self">Inicio</a></li>
             <li><a href="./nosotros.html" target="_self">Nosotros</a></li>
             <li><a href="./novedades.html" target="_self">Novedades</a></li>
             <li><a href="./tienda.html" target="_self">Tienda</a></li>
@@ -37,13 +39,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/header1.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header1.jpg" class="d-block w-100" alt="Foto Slider uno">
             </div>
             <div class="carousel-item">
-                <img src="../assets/header2.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header2.jpg" class="d-block w-100" alt="Foto Slider dos">
             </div>
             <div class="carousel-item">
-                <img src="../assets/header3.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header3.jpg" class="d-block w-100" alt="Foto Slider 3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -55,9 +57,9 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <main class="home__secciones">
-        <article class="home__secciones--texto">
-            <h1>SOMOS LA GUÍA DE CONSULTA DE LA CONSTRUCCIÓN, PARA QUE TODOS PUEDAN ENCONTRAR LOS PROVEEDORES PARA
+    <main class="nosotros__secciones">
+        <article class="nosotros__secciones--titulo">
+            <h1 class="nosotros_secciones--titulo">SOMOS LA GUÍA DE CONSULTA DE LA CONSTRUCCIÓN, PARA QUE TODOS PUEDAN ENCONTRAR LOS PROVEEDORES PARA
                 CONSTRUIR, REMODELAR, DECORAR O EQUIPAR SU CASA</h1>
             <p>Revista Serviobras nación en 2001 como una revista en papel que llevara
                 información útil sobre
@@ -68,52 +70,82 @@
                 que todo esto sea posible. Conocelos un poco más.</p>
         </article>
     </main>
-    <section class="home__secciones">
-        <div class="staff-box">
-            <img src="../assets/staff1.png" width="250px" alt="Foto staff 1">
-            <h2 class="font-color-rojo text-align-center">CARLA ALDERETE</h2>
-            <h3 class="text-align-center">DIRECTORA GENERAL</h3>
-            <p class="text-align-center">Trabajo hace más de 20 años en el rubro editorial y digital, en distintos
-                medios
-                de comunicacion y plataformas.</p>
-        </div>
-        <div class="staff-box">
-            <img src="../assets/staff6.png" width="250px" alt="Foto staff 1">
-            <h2 class="font-color-rojo text-align-center">FEDERICO TORRES</h2>
-            <h3 class="text-align-center">DIRECTOR EDITORIAL</h3>
-            <p class="text-align-center">Llegué a Revistas Serviobras para aportar toda mi experiencia como Director
-                Editorial y de contenidos.</p>
-        </div>
-        <div class="staff-box">
-            <img src="../assets/staff3.png" width="250px" alt="Foto staff 1">
-            <h2 class="font-color-rojo text-align-center">JOSEFINA TAIS</h2>
-            <h3 class="text-align-center">COMERCIAL</h3>
-            <p class="text-align-center">Trabajé en distintas empresas del rubro en el área comercial, fortaleciendo
-                siempre el vínculo entre los clientes.</p>
-        </div>
-        <div class="staff-box">
-            <img src="../assets/staff4.png" width="250px" alt="Foto staff 1">
-            <h2 class="font-color-rojo text-align-center">PEDRO SÁNCHEZ</h2>
-            <h3 class="text-align-center">DIRECTOR DIGITAL</h3>
-            <p class="text-align-center">Vine a Revista Serviobras para aportar todo mi conociento digital y para
-                mejorar
-                la interacción con los usuarios.</p>
-        </div>
-        <div class="staff-box">
-            <img src="../assets/staff2.png" width="250px" alt="Foto staff 1">
-            <h2 class="font-color-rojo text-align-center">FLORENCIA LUQUE</h2>
-            <h3 class="text-align-center">DISEÑADORA GRÁFICA</h3>
-            <p class="text-align-center">Soy Diseñadora Gráfica y Editorial. Trabajé para muchos medios graficos y
-                digitales de Argentina.</p>
-        </div>
-    </section>
+    <main>
+        <section class="nosotros__secciones">
+            <article class="nosotros__secciones--card">
+                <div class="nosotros__secciones--box">
+                    <img src="../assets/staff1.png" width="250px" alt="Foto staff 1">
+                    <h2 class="nosotros_staff--nombre">CARLA ALDERETE</h2>
+                    <h3 class="nosotros_staff--cargo">DIRECTORA GENERAL</h3>
+                    <p class="nosotros_staff--descripcion">Trabajo hace más de 20 años en el rubro editorial y digital, en
+                        distintos
+                        medios
+                        de comunicacion y plataformas.</p>
+                </div>
+                <div class="nosotros__secciones--box">
+                    <img src="../assets/staff6.png" width="250px" alt="Foto staff 2">
+                    <h2 class="nosotros_staff--nombre">FEDERICO TORRES</h2>
+                    <h3 class="nosotros_staff--cargo">DIRECTOR EDITORIAL</h3>
+                    <p class="nosotros_staff--descripcion">Llegué a Revistas Serviobras para aportar toda mi experiencia como
+                        Director
+                        Editorial y de contenidos.</p>
+                </div>
+                <div class="nosotros__secciones--box">
+                    <img src="../assets/staff3.png" width="250px" alt="Foto staff 3">
+                    <h2 class="nosotros_staff--nombre">JOSEFINA TAIS</h2>
+                    <h3 class="nosotros_staff--cargo">COMERCIAL</h3>
+                    <p class="nosotros_staff--descripcion">Trabajé en distintas empresas del rubro en el área comercial,
+                        fortaleciendo
+                        siempre el vínculo entre los clientes.</p>
+                </div>
+                <div class="nosotros__secciones--box">
+                    <img src="../assets/staff4.png" width="250px" alt="Foto staff 4">
+                    <h2 class="nosotros_staff--nombre">PEDRO SÁNCHEZ</h2>
+                    <h3 class="nosotros_staff--cargo">DIRECTOR DIGITAL</h3>
+                    <p class="nosotros_staff--descripcion">Vine a Revista Serviobras para aportar todo mi conociento digital y
+                        para
+                        mejorar
+                        la interacción con los usuarios.</p>
+                </div>
+                <div class="nosotros__secciones--box">
+                    <img src="../assets/staff2.png" width="250px" alt="Foto staff 5">
+                    <h2 class="nosotros_staff--nombre">FLORENCIA LUQUE</h2>
+                    <h3 class="nosotros_staff--cargo">DISEÑADORA GRÁFICA</h3>
+                    <p class="nosotros_staff--descripcion">Soy Diseñadora Gráfica y Editorial. Trabajé para muchos medios graficos
+                        y
+                        digitales de Argentina.</p>
+                </div>
+            </article>
+        </section>
+    </main>
 
     <!--Footer-->
-    <footer class="footer">
-        <img src="../assets/so_white.svg" width="200px" alt="Logo Serviobras">
-        <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
+    <footer>
+        <div class="footer__0">
+            <div class="footer__1">
+                <div>
+                    <div class="footer__logo">
+                        <img src="../assets/so_white.svg" width="200px">
+                    </div>
+                </div>
+            </div>
+            <div class="footer__2">
+                <div class="footer__box">
+                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="../assets/rrss_ig.png" alt="Instagram"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../assets/rrss_ln.png" alt="Linkedin"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.youtube.com/" target="_blank"><img src="../assets/rrss_yt.png" alt="YouTube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__caja2">
+            <p>Derechos reservados 2023</p>
+        </div>
     </footer>
-    <script> src= "./scripts/bootstrap.bundle.min"</script>
+    <script> src = "./scripts/bootstrap.bundle.min"</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
