--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <meta name="description" content="Conoce todas las novedades del mundo de la construccion">
+    <meta name="keywords" content="Novedades, Noticias, Reseñas, Consejos, Nuevas herramientas, Novedades en tecnologia, Nuevos productos, Nuevas herramientas, Nuevos servicios para la construccion, Arquitectura, Arquitectos, Obra, Equipamiento, Decoracion, Venta de materiales, Asesoriamiento en obra, Presupuestos, Albañileria, Refacciones, Repraciones, Arreglos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>Revista Serviobras</title>
+    <title>Novedades | Revista Serviobras</title>
 </head>
 
 <body>
@@ -37,13 +39,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/header1.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header1.jpg" class="d-block w-100" alt="Foto Slider uno">
             </div>
             <div class="carousel-item">
-                <img src="../assets/header2.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header2.jpg" class="d-block w-100" alt="Foto Slider dos">
             </div>
             <div class="carousel-item">
-                <img src="../assets/header3.jpg" class="d-block w-100" alt="...">
+                <img src="../assets/header3.jpg" class="d-block w-100" alt="Foto Slider tres">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -56,40 +58,41 @@
         </button>
     </div>
     <main class="novedades__main">
-        <section>
-            <h2 class="novedades-box--titulo" text-align-center">Novedades</h2>
-        </section>
-        <section class="novedades__secciones">
-            <article class="novedades-box">
-                <h3>Qué es el microcemento y cómo se aplica</h3>
-                <h4>EL MICROCEMENTO ES UN REVESTIMIENTO DECORATIVO CONTINUO QUE SE APLICA SOBRE SUPERFICIES HORIZONTALES
-                    Y VERTICALES, TANTO EN INTERIORES COMO EN EXTERIORES. SE COMPONE DE UNA MEZCLA DE CEMENTO, RESINAS Y
-                    ADITIVOS, Y SE CARACTERIZA POR SER MUY FINO Y TENER UN ACABADO LISO Y UNIFORME.</h4>
-                <img src="../assets/blog_Microcemento.jpg" alt="Foto novedades microcemento">
-                <p>La aplicación del microcemento se realiza en varias capas, cada una de ellas con un espesor
-                    máximo de 2-3 mm. La superficie sobre la que se va a aplicar debe estar limpia, seca y libre de
-                    polvo, grasa y restos de otros materiales. Si se trata de una superficie ya existente, esta debe
-                    estar preparada con una imprimación específica para el microcemento. La aplicación del
-                    microcemento se realiza en varias capas, cada una de ellas con un espesor máximo de 2-3 mm. La
-                    superficie sobre la que se va a aplicar debe estar limpia, seca y libre de polvo, grasa y restos
-                    de otros materiales. Si se trata de una superficie ya existente, esta debe estar preparada con
-                    una imprimación específica para el microcemento. Es ideal para cubrir superficies, entre otras,
-                    de hormigón, cemento, azulejos, baldosas, yeso, pladur, metal, plástico, gres, mármol, y un
-                    largo etc. Usos principales suelen ser en paredes y suelos, ya que aporta continuidad creando
-                    una mayor sensación de amplitud. Su adherencia a todas las superficies hace que el sistema
-                    microcemento sea ideal también para baños y cocinas, donde no habrá que retirar los antiguos
-                    azulejos, puesto que la colocación puede realizarse por encima. Otro de los usos principales es
-                    en el mobiliario de exteriores, gracias a la estética decorativa de su acabado y a su excelente
-                    durabilidad.</p>
-            </article>
-            <article class="novedades-box">
-                <h3>¿Qué son las casas sustentables?</h2>
-                    <h4>LAS CASAS SUSTENTABLES SE ENMARCAN DENTRO DE UN NUEVO CONCEPTO FILOSÓFICO DE LA ARQUITECTURA
+        <section class="novedades__main">
+            <article class="novedades__secciones">
+                <h1 class="novedades-box--titulo">Novedades</h1>
+                <div class="novedades-box">
+                    <h2>Qué es el microcemento y cómo se aplica</h2>
+                    <h3>EL MICROCEMENTO ES UN REVESTIMIENTO DECORATIVO CONTINUO QUE SE APLICA SOBRE SUPERFICIES
+                        HORIZONTALES
+                        Y VERTICALES, TANTO EN INTERIORES COMO EN EXTERIORES. SE COMPONE DE UNA MEZCLA DE CEMENTO,
+                        RESINAS Y
+                        ADITIVOS, Y SE CARACTERIZA POR SER MUY FINO Y TENER UN ACABADO LISO Y UNIFORME.</h3>
+                    <img src="../assets/blog_Microcemento.jpg" alt="Foto novedades microcemento">
+                    <p>La aplicación del microcemento se realiza en varias capas, cada una de ellas con un espesor
+                        máximo de 2-3 mm. La superficie sobre la que se va a aplicar debe estar limpia, seca y libre de
+                        polvo, grasa y restos de otros materiales. Si se trata de una superficie ya existente, esta debe
+                        estar preparada con una imprimación específica para el microcemento. La aplicación del
+                        microcemento se realiza en varias capas, cada una de ellas con un espesor máximo de 2-3 mm. La
+                        superficie sobre la que se va a aplicar debe estar limpia, seca y libre de polvo, grasa y restos
+                        de otros materiales. Si se trata de una superficie ya existente, esta debe estar preparada con
+                        una imprimación específica para el microcemento. Es ideal para cubrir superficies, entre otras,
+                        de hormigón, cemento, azulejos, baldosas, yeso, pladur, metal, plástico, gres, mármol, y un
+                        largo etc. Usos principales suelen ser en paredes y suelos, ya que aporta continuidad creando
+                        una mayor sensación de amplitud. Su adherencia a todas las superficies hace que el sistema
+                        microcemento sea ideal también para baños y cocinas, donde no habrá que retirar los antiguos
+                        azulejos, puesto que la colocación puede realizarse por encima. Otro de los usos principales es
+                        en el mobiliario de exteriores, gracias a la estética decorativa de su acabado y a su excelente
+                        durabilidad.</p>
+                </div>
+                <div class="novedades-box">
+                    <h2>¿Qué son las casas sustentables?</h2>
+                    <h3>LAS CASAS SUSTENTABLES SE ENMARCAN DENTRO DE UN NUEVO CONCEPTO FILOSÓFICO DE LA ARQUITECTURA
                         COMO UN
                         MOTOR DE IMPULSO EN LA CONSERVACIÓN DEL PLANETA. ESTOS DISEÑOS DE CASAS SUSTENTABLES HAN
                         DEMOSTRADO
-                        QUE NO TIENEN PORQUÉ SACRIFICAR EL CONFORT EN PRO DE LA ECOLOGÍA.</h4>
-                    <img src="../assets/blog_CasasSustentables.jpg" alt="Foto novedades microcemento">
+                        QUE NO TIENEN PORQUÉ SACRIFICAR EL CONFORT EN PRO DE LA ECOLOGÍA.</h3>
+                    <img src="../assets/blog_CasasSustentables.jpg" alt="Foto Casas sustentables">
                     <p>Los arquitectos de casas sustentables han tenido el inmenso reto de diseñar y construir
                         edificaciones
                         cómodas, placenteras y prácticas para sus habitantes. Pero, al mismo tiempo, han desarrollado
@@ -114,42 +117,59 @@
                         terreno
                         para ir desplazando a los viejos sistemas constructivos. Los avances de este tipo de casas en
                         México, Argentina, Chile o Colombia, son ejemplos de admirar.</p>
+                </div>
+
             </article>
         </section>
     </main>
-    <main class="novedades__main">
-        <section class="novedades__bullet">
-            <div class="novedades__bullets--card">
-                <img src="../assets/bullets1.png" alt="Foto staff 1">
-                <h2 class="text-align-center">ENVÍO GRATIS DESDE $10.000</h2>
-                <p class="text-align-center">Solo por estar registrado en Revista Serviobras tenés envíos gratis en
-                    miles de productos.</p>
-                <p class="text-align-center">Conocé más sobre este beneficio</p>
-            </div>
-            <div class="novedades__bullets--card">
-                <img src="../assets/bullets2.png" alt="Foto staff 1">
-                <h2 class="text-align-center">ENVÍO GRATIS DESDE $10.000</h2>
-                <p class="text-align-center">Solo por estar registrado en Revista Serviobras tenés envíos gratis en
-                    miles de productos.</p>
-                <p class="text-align-center">Conocé más sobre este beneficio</p>
-            </div>
-            </div>
-            <div class="novedades__bullets--card">
-                <img src="../assets/bullets3.png" alt="Foto staff 1">
-                <h2 class="text-align-center">ENVÍO GRATIS DESDE $10.000</h2>
-                <p class="text-align-center">Solo por estar registrado en Revista Serviobras tenés envíos gratis en
-                    miles de productos.</p>
-                <p class="text-align-center">Conocé más sobre este beneficio</p>
-            </div>
-            </div>
+    <main>
+        <section class="home__bullets">
+            <article class="home__bullets--cards">
+                <div class="home__bullets--texto"><img class="text-align-center" src="../assets/bullets1.png" alt="Icono Envio Gratis">
+                    <h2>ENVÍO GRATIS DESDE $10.000</h2>
+                    <p>Solo por estar registrado en Revista Serviobras tenés envíos gratis en
+                        miles de productos.</p>
+                    <p>Conocé más sobre este beneficio</p>
+                </div>
+                <div class="home__bullets--texto"><img class="text-align-center" src="../assets/bullets2.png" alt="Icono Como Pagar">
+                    <h2>ELEGÍ CÓMO PAGAR</h2>
+                    <p>Podés pagar con tarjeta, débito, efectivo o hasta 12 cuotas sin tarjeta con Serviobras Crédito.</p>
+                    <p>Cómo pagar tus compras</p>
+                </div>
+                <div class="home__bullets--texto"><img class="text-align-center" src="../assets/bullets3.png" alt="Icono Seguridad">
+                    <h2>SEGURIDAD, DE PRINCIPIO A FIN</h2>
+                    <p>¿No te gusta? ¡Devolvelo! En Revista Serviobras, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
+                    <p>Cómo te protegemos</p>
+                </div>
         </section>
     </main>
 
 
     <!--Footer-->
-    <footer class="footer">
-        <img src="../assets/so_white.svg" width="200px" alt="Logo Serviobras">
-        <p class="font-color-blanco font-size-footer">Todos los derechos reservados © 2023</p>
+    <footer>
+        <div class="footer__0">
+            <div class="footer__1">
+                <div>
+                    <div class="footer__logo">
+                        <img src="../assets/so_white.svg" width="200px">
+                    </div>
+                </div>
+            </div>
+            <div class="footer__2">
+                <div class="footer__box">
+                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="../assets/rrss_ig.png" alt="Instagram"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../assets/rrss_ln.png" alt="Linkedin"></a>
+                </div>
+                <div class="footer__box">
+                    <a href="https://www.youtube.com/" target="_blank"><img src="../assets/rrss_yt.png" alt="YouTube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__caja2">
+            <p>Derechos reservados 2023</p>
+        </div>
     </footer>
     <script> src = "./scripts/bootstrap.bundle.min"</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
