--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./assets/header1.jpg" class="d-block w-100" alt="Foto slider uno">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header1.jpg" class="d-block w-100" alt="Foto slider uno"></a>
             </div>
             <div class="carousel-item">
-                <img src="./assets/header2.jpg" class="d-block w-100" alt="Foto slider dos">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header2.jpg" class="d-block w-100" alt="Foto slider dos"></a>
             </div>
             <div class="carousel-item">
-                <img src="./assets/header3.jpg" class="d-block w-100" alt="Foto slider tres">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header3.jpg" class="d-block w-100" alt="Foto slider tres"></a>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -120,7 +120,7 @@
                     y reacciona: la baldosa puede centellear, iluminarse, captar y dispersar colores vecinos en su
                     superficie. Decorar con este material ofrece nuevas oportunidades en arquitectura y diseño de
                     interiores. Conocelos todos en este informe.</p>
-                <button class="boton--ver-mas">VER MÁS</button>
+                <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
             </article>
             <article class="home__novedades--cards">
                 <img src="./assets/news2.jpg" alt="Foto IA Asi ha cambiado la arquitectura">
@@ -131,7 +131,7 @@
                     EverydayExperiments.com. Desde la meditación y la naturaleza hasta la comida y el juego, estos
                     experimentos permiten nuevas formas de sentir.
                 </p>
-                <button class="boton--ver-mas">VER MÁS</button>
+                <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
             </article>
             <article class="home__novedades--cards">
                 <img src="./assets/news3.jpg" alt="Foto tendencias de color 2023">
@@ -141,7 +141,7 @@
                     diseño, interiorismo, arquitectura o moda, estos colores se relacionan con la renovación, como
                     los tonos neutrales como el crema o beige, los pasteles y la gama de azules y verdes claros.
                     Conocelos todos en este informe.</p>
-                <button class="boton--ver-mas">VER MÁS</button>
+                    <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
             </article>
         </section>
     </main>
