--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
 
         <!--Menu-->
         <ul>
-            <li><a href="../index.html" target="_self">Ir a inicio</a></li>
+            <li><a href="../index.html" target="_self">Inicio</a></li>
             <li><a href="./nosotros.html" target="_self">Nosotros</a></li>
             <li><a href="./novedades.html" target="_self">Novedades</a></li>
             <li><a href="./tienda.html" target="_self">Tienda</a></li>
@@ -40,13 +40,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/header1.jpg" class="d-block w-100" alt="Foto slider uno">
+                <a href="./tienda.html" target="_self"><img src="../assets/header1.jpg" class="d-block w-100" alt="Foto slider uno"></a>
             </div>
             <div class="carousel-item">
-                <img src="../assets/header2.jpg" class="d-block w-100" alt="Foto slider dos">
+                <a href="./tienda.html" target="_self"><img src="../assets/header2.jpg" class="d-block w-100" alt="Foto slider dos"></a>
             </div>
             <div class="carousel-item">
-                <img src="../assets/header3.jpg" class="d-block w-100" alt="Foto slider tres">
+                <a href="./tienda.html" target="_self"><img src="../assets/header3.jpg" class="d-block w-100" alt="Foto slider tres"></a>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
