--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -35,7 +35,7 @@
             </ul>
         </header>
         <main class="main">
-            <img src="../assets/header2.jpg" width="100%" alt="Foto header">
+            <a href="./tienda.html" target="_self"><img src="../assets/header2.jpg" width="100%" alt="Foto header"></a>
         </main>
         <nav class="nav-1">
             <div>
