--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,13 +39,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/header1.jpg" class="d-block w-100" alt="Foto Slider uno">
+                <a href="./tienda.html" target="_self"><img src="../assets/header1.jpg" class="d-block w-100" alt="Foto Slider uno"></a>
             </div>
             <div class="carousel-item">
-                <img src="../assets/header2.jpg" class="d-block w-100" alt="Foto Slider dos">
+                <a href="./tienda.html" target="_self"><img src="../assets/header2.jpg" class="d-block w-100" alt="Foto Slider dos"></a>
             </div>
             <div class="carousel-item">
-                <img src="../assets/header3.jpg" class="d-block w-100" alt="Foto Slider 3">
+                <a href="./tienda.html" target="_self"><img src="../assets/header3.jpg" class="d-block w-100" alt="Foto Slider tres"></a>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
