--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <meta name="description" content="Conoce todas las novedades del mundo de la construccion">
-    <meta name="keywords" content="Novedades, Noticias, Reseñas, Consejos, Nuevas herramientas, Novedades en tecnologia, Nuevos productos, Nuevas herramientas, Nuevos servicios para la construccion, Arquitectura, Arquitectos, Obra, Equipamiento, Decoracion, Venta de materiales, Asesoriamiento en obra, Presupuestos, Albañileria, Refacciones, Repraciones, Arreglos">
+    <meta name="keywords"
+        content="Novedades, Noticias, Reseñas, Consejos, Nuevas herramientas, Novedades en tecnologia, Nuevos productos, Nuevas herramientas, Nuevos servicios para la construccion, Arquitectura, Arquitectos, Obra, Equipamiento, Decoracion, Venta de materiales, Asesoriamiento en obra, Presupuestos, Albañileria, Refacciones, Repraciones, Arreglos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +30,7 @@
 
         <!--Menu-->
         <ul>
-            <li><a href="../index.html" target="_self">Ir a inicio</a></li>
+            <li><a href="../index.html" target="_self">Inicio</a></li>
             <li><a href="./nosotros.html" target="_self">Nosotros</a></li>
             <li><a href="./novedades.html" target="_self">Novedades</a></li>
             <li><a href="./tienda.html" target="_self">Tienda</a></li>
@@ -39,13 +40,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../assets/header1.jpg" class="d-block w-100" alt="Foto Slider uno">
+                <a href="./tienda.html" target="_self"><img src="../assets/header1.jpg" class="d-block w-100"
+                        alt="Foto Slider uno"></a>
             </div>
             <div class="carousel-item">
-                <img src="../assets/header2.jpg" class="d-block w-100" alt="Foto Slider dos">
+                <a href="./tienda.html" target="_self"><img src="../assets/header2.jpg" class="d-block w-100"
+                        alt="Foto Slider dos"></a>
             </div>
             <div class="carousel-item">
-                <img src="../assets/header3.jpg" class="d-block w-100" alt="Foto Slider tres">
+                <a href="./tienda.html" target="_self"><img src="../assets/header3.jpg" class="d-block w-100"
+                        alt="Foto Slider tres"></a>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -58,7 +62,7 @@
         </button>
     </div>
     <main class="novedades__main">
-        <section class="novedades__main">
+        <section class="novedades__columna1">
             <article class="novedades__secciones">
                 <h1 class="novedades-box--titulo">Novedades</h1>
                 <div class="novedades-box">
@@ -101,8 +105,9 @@
                         quedando atrás y va dando paso a nuevas REALIDADES ARQUITECTÓNICAS. Su instrumento más tangible
                         son
                         las casas sustentables, una solución eficaz, eficiente y práctica.</p>
-                    <iframe width="960" height="500" src="https://www.youtube.com/embed/KCTTlakZjYI?si=nG9FCyxgKPZTK2yT"
-                        title="YouTube video player" frameborder="0"
+                    <iframe width="420" height="240"
+                        src="https://www.youtube.com/embed/KCTTlakZjYI?si=nG9FCyxgKPZTK2yT" title="YouTube video player"
+                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                     <p>Pero, para que las casas sustentables puedan ser llevadas del plano a la realidad, los
@@ -121,29 +126,17 @@
 
             </article>
         </section>
-    </main>
-    <main>
-        <section class="home__bullets">
-            <article class="home__bullets--cards">
-                <div class="home__bullets--texto"><img class="text-align-center" src="../assets/bullets1.png" alt="Icono Envio Gratis">
-                    <h2>ENVÍO GRATIS DESDE $10.000</h2>
-                    <p>Solo por estar registrado en Revista Serviobras tenés envíos gratis en
-                        miles de productos.</p>
-                    <p>Conocé más sobre este beneficio</p>
-                </div>
-                <div class="home__bullets--texto"><img class="text-align-center" src="../assets/bullets2.png" alt="Icono Como Pagar">
-                    <h2>ELEGÍ CÓMO PAGAR</h2>
-                    <p>Podés pagar con tarjeta, débito, efectivo o hasta 12 cuotas sin tarjeta con Serviobras Crédito.</p>
-                    <p>Cómo pagar tus compras</p>
-                </div>
-                <div class="home__bullets--texto"><img class="text-align-center" src="../assets/bullets3.png" alt="Icono Seguridad">
-                    <h2>SEGURIDAD, DE PRINCIPIO A FIN</h2>
-                    <p>¿No te gusta? ¡Devolvelo! En Revista Serviobras, no hay nada que no puedas hacer, porque estás siempre protegido.</p>
-                    <p>Cómo te protegemos</p>
-                </div>
+        <section class="novedades__columna2">
+            <div class="banner">
+                <a href="https://www.suprabond.com/producto-tag/bulit/" target="_blank"><img src="../assets/banner2.jpg"
+                        alt="Banner lateral Discos"></a>
+            </div>
+            <div class="banner">
+                <a href="https://www.suprabond.com/producto-tag/bulit/" target="_blank"><img src="../assets/banner1.jpg"
+                        alt="Banner lateral Espatulas"></a>
+            </div>
         </section>
     </main>
-
 
     <!--Footer-->
     <footer>
@@ -157,13 +150,16 @@
             </div>
             <div class="footer__2">
                 <div class="footer__box">
-                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="../assets/rrss_ig.png" alt="Instagram"></a>
+                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="../assets/rrss_ig.png"
+                            alt="Instagram"></a>
                 </div>
                 <div class="footer__box">
-                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../assets/rrss_ln.png" alt="Linkedin"></a>
+                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="../assets/rrss_ln.png"
+                            alt="Linkedin"></a>
                 </div>
                 <div class="footer__box">
-                    <a href="https://www.youtube.com/" target="_blank"><img src="../assets/rrss_yt.png" alt="YouTube"></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img src="../assets/rrss_yt.png"
+                            alt="YouTube"></a>
                 </div>
             </div>
         </div>
